# MAVLink_wizard

./: CMakeLists.txt  README.md  package.xml
config/: example_device_config.json  wizard_config.yaml
launch/: mavlink_wizard.launch.py
resource/: mavlink_wizard
scripts/: calibration_wizard.py  device_scanner.py  firmware_manager.py  mavlink_wizard_gui.py  message_monitor.py  parameter_manager.py  real_time_plotter.py  test_components.py  test_scanner.py
